# ometeotl

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  cahier_des_charges_V1.md  chatgpt_brainstorm.md  pyproject.toml  specs_EN.md  specs_FR.md  specs_V1.md
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: contributors_update.yaml  hugo.yaml  leaderboard_update.yaml  ometeotl-rank-contributors.yaml  ometeotl-ranks.yaml  pylint.yml
doc-site/: hugo.toml
examples/: __init__.py
examples/lab10_complex_behavior_sim/: engine.py  test_sim_local.py  web_server.py
examples/lab11_technology/: README.md  config.py  engine.py  perception.py  test_sim_local.py
examples/lab12_devastation/: test_sim_local.py  web_server.py
examples/lab13_ometeotl_retrofit/: engine.py  test_sim_local.py
examples/lab14_client_side_calculations/: README.md
examples/lab15_enhanced_local_mechanics/: engine.py  test_sim_local.py
examples/lab3_perception_sim/: OMETEOTL_USEFULNESS_REPORT.md  README.md  engine.py  graph_gen.py  test_sim_local.py
examples/lab4_logistics_sim/: README.md  engine.py  perception.py  test_sim_local.py  web_server.py
examples/lab5_behavior_sim/: README.md  config.py  engine.py  perception.py  test_sim_local.py  web_server.py
examples/lab6_vassal_sim/: README.md  config.py  engine.py  graph_gen.py  test_sim_local.py
examples/lab7_centralization_sim/: config.py  engine.py  perception.py  test_sim_local.py  web_server.py
examples/lab8_relations_sim/: config.py  engine.py  perception.py  test_sim_local.py
examples/lab9_globalization_sim/: engine.py  test_sim_local.py
examples/multi_agent_sim/: __init__.py  config.py  engine.py.backup  test_sim_local.py
examples/reports/: lab12_ometeotl_custom_usage_audit.md  proposed-ometeotl-layers.md
examples/strategy_game/: cli.py  engine.py  test_engine_local.py  web_server.py
leaderboard/: LEADERBOARD.md  LEADERBOARD_SPEC.md  compute_leaderboard.py  config.json  leaderboard-data.json
src/ometeotl_adapters/: __init__.py
src/ometeotl_core/: __init__.py
src/ometeotl_foundations/: __init__.py
test/: test_model.py
tests/: conftest.py  test_core.py  test_leaderboard_compute.py  test_model.py
tests/core/: test_authority.py  test_runtime.py
tests/game/: test_game_utility.py
tests/generic/: test_authority.py  test_runtime.py
tests/io/: test_world_io.py
tests/model/: test_abstract_actors.py  test_actions.py  test_actors.py  test_actors_phase_d.py  (+16 more)
tools/: run_pytest.py
(+412 files in other folders)
